--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ starlette==0.27.0
 typing_extensions==4.7.1
 tzdata==2023.3
 uvicorn==0.22.0
+cosine-similarity==0.1.2
+scikit-learn==1.3.0
+scipy==1.11.1
+tfidf==0.0.6
