--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-annotated-types==0.5.0
-anyio==3.7.1
-click==8.1.6
-colorama==0.4.6
-exceptiongroup==1.1.2
-fastapi==0.100.1
-h11==0.14.0
-idna==3.4
-numpy==1.21.6
-pandas==1.3.5
-pydantic==2.1.1
-pydantic_core==2.4.0
-python-dateutil==2.8.2
-pytz==2023.3
-six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
-typing_extensions==4.7.1
-tzdata==2023.3
-uvicorn==0.22.0
-cosine-similarity==0.1.2
-scikit-learn==0.9
-scipy==1.11.1
-tfidf==0.0.6
+annotated-types
+anyio
+click
+colorama
+exceptiongroup
+fastapi
+h11
+idna
+numpy
+pandas
+pydantic
+pydantic_core
+python-dateutil
+pytz
+six
+sniffio
+starlette
+typing_extensions
+tzdata
+uvicorn
+cosine-similarity
+scikit-learn
+scipy
+tfidf
