--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,5 @@
-annotated-types
-anyio
-click
-colorama
-exceptiongroup
-fastapi
-h11
-idna
-numpy
-pandas
-pydantic
-pydantic_core
-python-dateutil
-pytz
-six
-sniffio
-starlette
-typing_extensions
-tzdata
-uvicorn
-cosine-similarity
-scikit-learn
-scipy
-tfidf
+uvicorn==0.23.2
+pandas==1.5.3
+fastapi==0.101.0
+numpy==1.24.2
+scikit-learn==1.3.0
